--- a/stylesheets/layout/_table.scss
+++ b/stylesheets/layout/_table.scss
@@ -65,9 +65,7 @@ td {
 			}
 
 		tr:nth-of-type(odd) > th,
-		tr:nth-of-type(odd) > td {
-
-		}
+		tr:nth-of-type(odd) > td {}
 
 		tfoot th,
 		tfoot td {
